--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-gesture-handler": "~2.8.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-size-matters": "^0.4.0"
+    "react-native-size-matters": "^0.4.0",
+    "expo-image-picker": "~14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
