--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/stack": "^6.3.12",
+    "@tanstack/react-query": "^4.24.4",
     "apisauce": "^2.1.6",
     "expo": "~47.0.12",
     "expo-constants": "~14.0.2",
     "expo-font": "~11.0.1",
+    "expo-image-picker": "~14.0.2",
+    "expo-secure-store": "^12.0.0",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
@@ -25,8 +28,7 @@
     "react-native-gesture-handler": "~2.8.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-size-matters": "^0.4.0",
-    "expo-image-picker": "~14.0.2"
+    "react-native-size-matters": "^0.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
